@@ -67,6 +67,7 @@ Bugs fixed
 * #6793: texinfo: Code examples broken following "sidebar"
 * #6813: An orphan warning is emitted for included document on Windows.  Thanks
   to @drillan
+* #6848: config.py shouldn't pop extensions from overrides
 
 Testing
 --------
